// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formatItems should format all items correctly 1`] = `
Array [
  Object {
    "arr": "a, b",
    "date": "",
    "enum": "test 1",
  },
  Object {
    "arr": "",
    "date": "2001-01-02",
    "enum": "test 1",
  },
  Object {
    "arr": "c",
    "date": "2017-10-01",
    "enum": "",
  },
]
`;

exports[`mapToColumns should map the object to the correct format for office-ui-fabric-react DetailsList\`s 1`] = `
Array [
  Object {
    "ariaLabel": undefined,
    "data": Object {},
    "fieldName": "testName1",
    "isResizable": true,
    "isSortedDescending": undefined,
    "key": "testName1",
    "maxWidth": 200,
    "minWidth": 100,
    "name": "testLabel1",
    "notSortable": false,
  },
  Object {
    "ariaLabel": undefined,
    "data": Object {},
    "fieldName": "testName2",
    "isResizable": true,
    "isSortedDescending": undefined,
    "key": "testName2",
    "maxWidth": 200,
    "minWidth": 100,
    "name": "testLabel2",
    "notSortable": false,
  },
  Object {
    "ariaLabel": undefined,
    "data": Object {},
    "fieldName": "testName3",
    "isResizable": true,
    "isSortedDescending": undefined,
    "key": "testName3",
    "maxWidth": 200,
    "minWidth": 100,
    "name": "testLabel3",
    "notSortable": false,
  },
]
`;

exports[`mapToColumns should not use keys in \`exclude\` if provided 1`] = `
Array [
  Object {
    "ariaLabel": undefined,
    "data": Object {},
    "fieldName": "testName1",
    "isResizable": true,
    "isSortedDescending": undefined,
    "key": "testName1",
    "maxWidth": 200,
    "minWidth": 100,
    "name": "testLabel1",
    "notSortable": false,
  },
]
`;

exports[`mapToColumns should only use keys in \`include\` if provided 1`] = `
Array [
  Object {
    "ariaLabel": undefined,
    "data": Object {},
    "fieldName": "testName1",
    "isResizable": true,
    "isSortedDescending": undefined,
    "key": "testName1",
    "maxWidth": 200,
    "minWidth": 100,
    "name": "testLabel1",
    "notSortable": false,
  },
  Object {
    "ariaLabel": undefined,
    "data": Object {},
    "fieldName": "testName3",
    "isResizable": true,
    "isSortedDescending": undefined,
    "key": "testName3",
    "maxWidth": 200,
    "minWidth": 100,
    "name": "testLabel3",
    "notSortable": false,
  },
]
`;
